# efimera

./: .gitignore  docker-compose.development.yml  docker-compose.yml
client/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js
client/src/components/Content/: index.js
client/src/components/Editor/: index.js
client/src/components/Embed/: index.js
client/src/components/Embed/providers/: Image.js  Instagram.js  YouTube.js  index.js
client/src/components/Grid/: index.js
client/src/components/Layout/: index.js
client/src/components/LinkPreview/: index.js
client/src/components/SearchBar/: index.js
client/src/components/Tag/: index.js
client/src/services/: notes.js  notes.test.js
server/: Dockerfile  Pipfile  Readme.md  app.py  celery_app.py  config.py  docker-compose.yml  make_celery.py  pyproject.toml
server/efimera/: __init__.py  extensions.py  models.py  objects.py  routes.py  schemas.py  tasks.py  utils.py
server/efimera/tasks/: __init__.py
server/migrations/versions/: 2fb7294bc69c_initial_migration.py  d62b10348a67_add_timestamps_to_note.py
server/tests/: conftest.py  test_routes.py
