[project]
name = "efimera"
version = "1.0.0"
description = "An api for saving notes."
readme = "Readme.md"
dependencies = [
    "flask",
]

[project.urls]
Documentation = "https://github.com/pori/efimera"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "efimera"

[tool.flit.sdist]
include = [
    "tests/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["efimera", "tests"]

[tool.ruff]
src = ["src"]
